objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Additional_Description__c</fullName>
        <description>This field will help Risk users to find relevant contract details and detail on older opportunities, Field created as part of DPS-17016</description>
        <label>Additional Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Reference__c</fullName>
        <description>This field will help Risk users to find relevant contract details and detail on older opportunities, Field created as part of DPS-17016</description>
        <label>Document Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
        <description>The created Date of the Legacy Note Converted</description>
        <label>LegacyNoteConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedId__c</fullName>
        <label>LegacyNoteConvertedId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDateTime__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c</fullName>
        <label>LegacyNoteConvertedOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedParentId__c</fullName>
        <label>LegacyNoteConvertedParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ParentId__c</fullName>
        <description>This is used to save the number of the original parent id</description>
        <label>Legacy ParentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_RecordId__c</fullName>
        <description>This is used to save the number of the original record id</description>
        <externalId>true</externalId>
        <label>Legacy RecordId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Renewal_Quote_ID__c</fullName>
        <label>Renewal Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <description>This is used to save the code of the original Source System</description>
        <label>System Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>